--- a/_posts/2020-01-06-blog-post-1.md
+++ b/_posts/2020-01-06-blog-post-1.md
@@ -1,6 +1,6 @@
 ---
-title: 'Blog Post number 1'
-date: 2012-08-14
+title: 'Statement of Purpose: A personal guide'
+date: 2020-01-06
 permalink: /posts/2012/08/blog-post-1/
 tags:
   - cool posts
