--- a/_publications/EMBC-2020.md
+++ b/_publications/EMBC-2020.md
@@ -1,16 +1,12 @@
 ---
-title: "Using Biosignals for Objective Measurement of Presence in Virtual Reality
-Environments"
+title: "Using Biosignals for Objective Measurement of Presence in Virtual Reality Environments"
 collection: publications
 permalink: /publication/EMBC-2020
 excerpt: 'This is a preprint'
 date: 
 venue: 
 paperurl: 
-citation: '
+citation: 
 ---
-This paper is about the number 1. The number 2 is left for future work.
-
-[Download paper here](http://academicpages.github.io/files/EMBC-2020.pdf)
-
-Recommended citation: .
+[Download preprint here](http://academicpages.github.io/files/EMBC-2020.pdf)
+.
