--- a/_publications/EMBC-2020.md
+++ b/_publications/EMBC-2020.md
@@ -1,7 +1,7 @@
 ---
 title: "Using Biosignals for Objective Measurement of Presence in Virtual Reality Environments"
 collection: publications
-permalink: /publication/EMBC-2020
+permalink: /publication/EMBC_2020
 excerpt: 'This is a preprint'
 date: 
 venue: 
