--- a/_publications/EMBC_2020.md
+++ b/_publications/EMBC_2020.md
@@ -8,6 +8,6 @@ venue:
 paperurl: 
 citation: 
 ---
-[Download preprint here](http://academicpages.github.io/files/EMBC-2020.pdf)
+[Download preprint here](http://academicpages.github.io/files/EMBC_2020.pdf)
 
 © 20XX IEEE.  Personal use of this material is permitted.  Permission from IEEE must be obtained for all other uses, in any current or future media, including reprinting/republishing this material for advertising or promotional purposes, creating new collective works, for resale or redistribution to servers or lists, or reuse of any copyrighted component of this work in other works.
