--- a/_publications/EMBC_2020.md
+++ b/_publications/EMBC_2020.md
@@ -3,10 +3,10 @@ title: "Using Biosignals for Objective Measurement of Presence in Virtual Realit
 collection: publications
 permalink: /publication/EMBC_2020
 excerpt: 'This is a preprint'
-date: 2009-10-01
-venue: Test
+date: 
+venue: 
 paperurl: http://academicpages.github.io/files/EMBC_2020.pdf
-citation: Test
+citation: 
 ---
 [Download preprint here](http://academicpages.github.io/files/EMBC_2020.pdf)
 
