--- a/_publications/EMBC_2020.md
+++ b/_publications/EMBC_2020.md
@@ -3,7 +3,7 @@ title: "Using Biosignals for Objective Measurement of Presence in Virtual Realit
 collection: publications
 permalink: /publication/EMBC_2020
 excerpt: 'This is a preprint'
-date: 
+date: 2019-02-23
 venue: 
 paperurl: http://athifrm.github.io/files/EMBC_2020.pdf
 citation: 
